2009-04-20  Sanel <karijes@users.sourceforge.net>

	* src/StrUtil.cpp: some valgrind warning fixup
	* src/rx/regex.h: __restrict_arr makes a lot of problems on NetBSD's gcc
	4.1.2 so this part is replaced with updated code found somewere on the net

2009-04-18  Sanel <karijes@users.sourceforge.net>

	* m4/pkg.m4: removed obsolete line
	* m4/mime.m4: fix a bug with IFS, noticeable on ksh shell

2009-04-17  Sanel <karijes@users.sourceforge.net>

	* edelib/Config.h:
	* src/Config.cpp:
	* test/conf.cpp: removed usage of File class
	* m4/pkg.m4: ksh hack

2009-04-13  Sanel <karijes@users.sourceforge.net>

	* m4/jam.m4: check if we have broken jam's that does not correctly use
	return statement

2009-04-12  Sanel <karijes@users.sourceforge.net>

	* all: fixed some warnings generated by gcc's (>=4.3)
	* edelib.pc.in:
	* edelib-dbus.pc.in: dump URL key since it is not supported by older
	pkg-config versions

2009-04-10  Sanel <karijes@users.sourceforge.net>

	* test/UnitTest.h:
	* test/UnitTest.cpp:
	* test/run_tests.cpp: removed CDash output; added '--silent' command line
	option
	* test/UnitTest.cpp: failed tests will be sent to stderr; better output
	formatting
	* Jamrules: let 'jam tests' run unit tests
	* src/Debug.cpp: use fputs()
	* configure.in: check if env EDELIB_USE_LOCALDIR was set; if true, see
	local directory as install destination so .pc files can be called pointing
	to this directory

2009-04-09  Sanel <karijes@users.sourceforge.net>

	* src/Run.cpp: BSD's keeps BSD definition in sys/param.h
	* run-tests.sh: removed

2009-04-08  Sanel <karijes@users.sourceforge.net>

	* INSTALL: corrected environment variables
	* m4/fltk.m4: remove unneeded comma
	* src/Run.cpp: include needed headers for BSD systems

2009-04-07  Sanel <karijes@users.sourceforge.net>

	* test/UnitTest.h:
	* test/UnitTest.cpp:
	* test/run_tests.cpp: return 1 if tests failed or 0 if opposite
	* run-tests.sh: added

2009-04-02  Sanel <karijes@users.sourceforge.net>

	* edelib/Color.h: